Footer bug fixed, card overflow hidden

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 }
 
 .body {
-  @apply bg-gray-50 h-screen;
+  @apply bg-gray-50 min-h-screen max-h-full;
 }
 /* Header styles start */
 .header {
@@ -79,7 +79,7 @@
 }
 
 .grid-card {
-  @apply relative w-full h-full rounded-2xl transform hover:scale-95 transition ease-in-out duration-200;
+  @apply relative w-full h-full overflow-hidden rounded-2xl transform hover:scale-95 transition ease-in-out duration-200;
 }
 
 .card-img {
@@ -95,7 +95,7 @@
 }
 
 .card-title {
-  @apply text-lg font-bold text-nowrap text-gray-700;
+  @apply text-lg font-bold text-nowrap overflow-hidden text-gray-700;
 }
 .card-time {
   @apply flex items-center text-base font-semibold text-gray-700;
@@ -106,5 +106,5 @@
 /* DataGrid styles end  */
 
 .footer {
-  @apply flex items-start px-16 py-4 bg-black h-20 text-white text-xl font-bold;
+  @apply flex bottom-0 items-start px-16 py-4 bg-black h-20 text-white text-xl font-bold;
 }
